--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+chex==0.1.2
 numpy~=1.19.5
 tqdm>=4.45.0
 wandb>=0.11.2
@@ -8,7 +9,8 @@ optax==0.0.9
 dm-haiku==0.0.5
 git+https://github.com/EleutherAI/lm-evaluation-harness/
 ray[default]==1.4.1
-jax~=0.2.12
+jax==0.2.12
+jaxlib==0.1.68
 Flask~=1.1.2
 cloudpickle~=1.3.0
 tensorflow-cpu~=2.6.0
